# manager

./: .gitignore  Cargo.toml  README.md
config/: default.toml
src/: database.rs  main.rs  settings.rs
src/actions/: ban.rs  config.rs  kick.rs  mod.rs  mute.rs  promote.rs
src/handlers/: mod.rs  new_group.rs
