[package]
name = "manager"
version = "0.1.0"
authors = ["Sparkenstein <zetabytes.pp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version =  "0.2.11", features = ["rt-threaded", "macros"] }
tbot = "0.6.5"
serde = "1.0.115"
serde_derive = "1.0.115"
rusqlite = "0.24.0"
